# minerva

./: README.md  pyproject.toml
docs/: README.md  coding_memory_design.md  computer_memory.md  design_v2.md  execution.md  human_memory.md  quickstart_with_uv.md  usecases.md  workflow.md  workflow_v2.md
src/minerva/: __init__.py  cli.py  memory.py
tests/: __init__.py  test_memory.py
